# KVANT-core

./: .env.dev  .env.example  .env.prod  .gitignore  BACKEND_FRONTEND_SYNC.md  DOCKER_SETUP.md  DOCKER_TROUBLESHOOTING.md  Makefile  QUICK_START.md  README.md  docker-compose.dev-internal.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
omi-dev/: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  project.sh  pyproject.toml
omi-dev/.ci/chart/: values.yaml
omi-dev/.ci/chart/templates/: deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
omi-dev/.ci/deploy/: values.dev.yaml  values.prod.yaml
omi-dev/.ci/files/: entrypoint.sh
omi-dev/src/: main.py  settings.py  sqitch.py
omi-dev/src/api/: auth.py  directories.py  logs.py  questionnaire.py  registry.py  services.py  users.py
omi-dev/src/dblayer/: directories.py  factory.py  logs.py  questionnaire.py  registries.py  users.py
omi-dev/src/dc_core/: README.md  __init__.py
omi-dev/src/dc_core/coreutils/: __init__.py  jwt.py  security.py  smtp.py  validators.py
omi-dev/src/dc_core/dblayer/: __init__.py  auth.py  factory.py  storage.py  users.py
omi-dev/src/dc_core/handlers/: __init__.py  auth.py  storage.py  users.py
omi-dev/src/dc_core/models/: requests.py  responses.py
omi-dev/src/handlers/: __init__.py  _calc.py  auth.py  directories.py  logs.py  questionnaire.py  registry.py  services.py  storage.py  users.py
omi-dev/src/migrations/: sqitch.conf  sqitch.plan
omi-dev/src/migrations/deploy/: 001_first.sql  (+1 more)
omi-dev/src/utils/: db.py  depends.py
(+114 files in other folders)
