[tool.poetry]
name = "omi"
version = "0.1.0"
description = ""
authors = ["Sergey Syrov <sergelab@gmail.com>"]
packages = [
    { include = "src" },
    { include = "*", from = "src" }
]
include = ["project.sh"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
SQLAlchemy = "^2.0.7"
uvicorn = "^0.21.1"
aiosql = "^8.0"
psycopg2-binary = "^2.9.5"
email-validator = "^1.3.1"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
PyJWT = "^2.6.0"
Jinja2 = "^3.1.2"
pendulum = "^2.1.2"
requests = "^2.30.0"
XlsxWriter = "^3.1.1"
python-docx = "^0.8.11"
fpdf2 = "^2.7.4"
boto3 = "^1.26.145"
python-multipart = "^0.0.6"
sentry-sdk = {extras = ["fastapi"], version = "^1.31.0"}
sentry-asgi = "^0.2.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
